feat: :lipstick: Mejora del HTML y CSS
Se agrearon imágenes y recursos a las carpeta storage

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
 }
 body{
+    background: var(--color-1);
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: 118px 1fr;
