--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,7 +6,148 @@
 }
 body{
     background: var(--color-1);
+    color: white; /*borrar despues*/
     display: grid;
     grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: 118px 1fr;
+    grid-template-rows: 95px 1fr;
+    padding: 23px 1% 0 1%;
+    column-gap: 2%;
+    grid-template-areas:"log log menu menu menu menu menu menu opc opc"
+                        "pro pro pro pro pro info info info info info";
+}
+.logo{
+    background-color: aqua;
+    grid-area: log;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.logo img{
+    width: 158px;
+    height: 95px;
+    max-width: 2fr;
+    object-fit: contain;
+}
+.menu{
+    background-color: green;
+    grid-area: menu;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.menu ul{
+    display: flex;
+    gap: 33px;
+}
+.menu ul li{
+  list-style: none;
+}
+.menu ul li a{
+    text-decoration: none;
+    color: white;
+    font-family: "Inter-SemiBold";
+    font-size: 28px;
+}
+.options{
+    background-color: blueviolet;
+    grid-area: opc;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 18px;
+    padding-right: 67px;
+}
+.options img{
+    width: 24PX;
+    height: 24px;
+    max-width: 2fr;
+    object-fit: contain;
+}
+.product{
+    background: red;
+    grid-area: pro;
+    width: 708px;
+    height: 663px;
+    position: relative;
+}
+.product__title{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.product__text{
+    display: flex;
+    justify-content: center ;
+    align-items: center;
+    flex-direction: column;
+    /* width: 304px;
+    height: 123px; */
+}
+.product__text p{
+    text-align: center;
+    font-family: "sweadScript-Regular";
+    font-size: 24px;
+}
+.product__text h1{
+    text-align: center;
+    font-family: "lalezar-Regular";
+    font-size: 64px;
+}
+.product__text h3{
+    text-align: center;
+    font-family: "lalezar-Regular";
+    font-size: 32px;
+}
+.product__img img{
+    position: absolute;
+    height: 663px;
+    object-fit: contain;
+    bottom: 0;
+    width: 100%;
+    max-width: 5fr;
+}
+.product__img img{
+    /* width: 100%; */
+    /* max-width: 5fr; */
+    position: absolute;
+}
+.info{
+    background-color: orange;
+    grid-area: info;
+    display: grid;
+    width: 100%;
+    height: 294px;
+}
+.info__text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.info__text h1{
+    text-align: center;
+    font-family: "Inter-Bold";
+    font-size: 69.5px;
+}
+.info__text span{
+    text-align: center;
+    font-family: "Lealezar-Regular";
+    font-size: 32px;
+}
+.info__text p{
+    text-align: center;
+    font-family: "Inder-Regular";
+    font-size: 24px;
+}
+.info__btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.info__btn a{
+    text-decoration: none;
+    color: white;
+    background: var(--color-2);
+    padding: 10px 20px;
+    border-radius: 5px;
 }
