--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,7 +17,7 @@ body{
                         "pro pro pro pro pro info info info info info";
 }
 .logo{
-    background-color: aqua;
+    /* background-color: aqua; */
     grid-area: log;
     display: flex;
     justify-content: center;
@@ -30,7 +30,7 @@ body{
     object-fit: contain;
 }
 .menu{
-    background-color: green;
+    /* background-color: green; */
     grid-area: menu;
     display: flex;
     justify-content: center;
@@ -50,7 +50,7 @@ body{
     font-size: 28px;
 }
 .options{
-    background-color: blueviolet;
+    /* background-color: blueviolet; */
     grid-area: opc;
     display: flex;
     justify-content: flex-end;
@@ -65,7 +65,7 @@ body{
     object-fit: contain;
 }
 .product{
-    background: red;
+    /* background: red; */
     grid-area: pro;
     width: 48svw;
     height: 88svh;
@@ -111,18 +111,20 @@ body{
 .product__img img:nth-child(1){
     z-index: 1;
     transform: rotate(32.69deg);
-    transform-origin: 45% 17%;
+    transform-origin: 35% 20%;
 }
 .product__img img:nth-child(2){
     z-index: 10;
     transform: rotate(56.18deg);
+    transform-origin: 41% 60%;
 }
 .product__img img:nth-child(3){
     z-index: 5;
     transform: rotate(85.74deg);
+    transform-origin: 27% 66%;
 }
 .info{
-    background-color: orange;
+    /* background-color: orange; */
     grid-area: info;
     display: flex;
     width: 48svw;
@@ -145,8 +147,8 @@ body{
 }
 .info__text span{
     text-align: center;
-    font-family: "Lealezar-Regular";
-    font-size: 32px;
+    font-family: "Lalezar-Regular";
+    font-size: 32px;    
 }
 .info__text p{
     font-family: "Inder-Regular";
@@ -163,7 +165,7 @@ body{
     color: white;
     background: var(--color-2);
     padding: 20px 34px;
-    border-radius: 5px;
+    border-radius: 10px;
     font-family: "Inder-Regular";
     font-size: 24px;
     text-align: center;
